[package]
name = "prometheus-nut-exporter"
version = "1.0.0-SNAPSHOT"
authors = ["HON95"]
license = "GPLv3"
description = "A Prometheus exporter for Network UPS Tools (NUT)."
keywords = ["prometheus", "openmetrics", "nut", "exporter"]
homepage = "https://github.com/HON95/prometheus-nut-exporter"
repository = "https://github.com/HON95/prometheus-nut-exporter"
edition = "2018"

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4.11"
url = "2.1.1"
