[package]
name = "prometheus-nut-exporter"
version = "0.0.0"
authors = ["HON95"]
license = "GPLv3"
description = "A Prometheus exporter for Network UPS Tools (NUT)."
keywords = ["prometheus", "openmetrics", "nut", "exporter"]
homepage = "https://github.com/HON95/prometheus-nut-exporter"
repository = "https://github.com/HON95/prometheus-nut-exporter"
edition = "2018"

[dependencies]
hyper = { version = "0.14.5", features = ["full"] }
tokio = { version = "1.4.0", features = ["full"] }
chrono = "0.4.19"
url = "2.2.1"
regex = "1.4.5"
lazy_static = "1.4.0"
