[package]
name = "prometheus-nut-exporter"
version = "0.0.0"
authors = ["HON95"]
license = "GPLv3"
description = "A Prometheus exporter for Network UPS Tools (NUT)."
keywords = ["prometheus", "openmetrics", "nut", "exporter"]
homepage = "https://github.com/HON95/prometheus-nut-exporter"
repository = "https://github.com/HON95/prometheus-nut-exporter"
edition = "2018"

[dependencies]
hyper = { version = "0.14.*", features = ["full"] }
tokio = { version = "1.15.*", features = ["full"] }
chrono = "0.4.*"
url = "2.2.*"
regex = "1.5.*"
lazy_static = "1.4.*"
log = "0.4.*"
env_logger = "0.9.*"
